<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.auth.SignUpCheckDataController">

    <LinearLayout
        android:id="@+id/eventLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="180dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintBottom_toTopOf="@id/friendsLayout"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/eventButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_40dp"
            android:drawableTop="@drawable/ic_my_events"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/textEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/my_events"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/invitedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="146dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintBottom_toTopOf="@id/friendsLayout"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/invitedButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_40dp"
            android:drawableTop="@drawable/ic_invited"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/textInvitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/i_invited"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wantLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginBottom="66dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintBottom_toTopOf="@id/friendsLayout"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/wantButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_40dp"
            android:drawableTop="@drawable/ic_like"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/textWantBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/want_to_buy"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/friendsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="235dp"
        android:layout_marginTop="286dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_40dp"
            android:drawableTop="@drawable/ic_friends"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/textFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/my_friends"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/catalogLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friendsLayout">

        <Button
            android:id="@+id/catalogButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_40dp"
            android:drawableTop="@drawable/ic_catalog"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/textCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/catalog"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialogLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="146dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friendsLayout">

        <Button
            android:id="@+id/dialogButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_40dp"
            android:drawableTop="@drawable/ic_dialog"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/textDialogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dialogs"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notificationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friendsLayout">

        <Button
            android:id="@+id/notificationButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_40dp"
            android:drawableTop="@drawable/ic_notification"
            android:paddingTop="12dp" />


        <TextView
            android:id="@+id/textNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/notifications"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeImageData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="432dp"
        android:layout_height="432dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorWhite"
        android:translationX="-183dp"
        app:cardCornerRadius="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="432dp"
            android:layout_height="432dp">

            <Button
                android:id="@+id/profileButton"
                android:layout_width="180dp"
                android:layout_height="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="65dp"
                android:background="@drawable/profile_button_state"
                android:elevation="4dp"
                android:gravity="end"
                android:paddingEnd="20dp"
                android:text="@string/profile"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageUser"
                app:layout_constraintEnd_toEndOf="@+id/imageUser"
                tools:ignore="RtlSymmetry" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageUser"
                android:layout_width="311dp"
                android:layout_height="311dp"
                android:layout_marginEnd="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/toolbarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="@color/colorButton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>